[package]
name = "duat-hop"
version = "0.2.1"
authors = ["AhoyISki"]
description = "A duat plugin to quickly move around words, inspired by hop.nvim"
repository = "https://github.com/AhoyISki/duat-hop"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["editor", "text", "plugin", "duat"]
categories = ["command-line-utilities", "text-editors", "config"]
edition = "2024"

[dependencies]
duat = "0.7.7"
